# TinyDnn

./: .gitignore  CMakeLists.txt  Utility.cpp  Utility.h  cross_entropy_loss.cpp  cross_entropy_loss.h  dnn.cpp  dnn.h  full_connect.cpp  full_connect.h  graph_manager.cpp  graph_manager.h  main.cpp  operator_base.cpp  operator_base.h  operator_bash.h  variable.cpp  variable.h
